<resources>
    <string name="app_name">ECG Demo</string>



    <string name="ss9">下一步--扫描绑定设备
</string>
    <string name="ss10">连接设备
</string>
    <string name="ss11">扫描二维码绑定设备
</string>
    <string name="ss12">跳过设备绑定步骤
</string>
    <string name="ss13">实时监测

</string>
    <string name="ss14">心率

</string>
    <string name="ss15">增益

</string>
    <string name="ss16">走速
</string>
    <string name="ss17">心电波形

</string>
    <string name="ss18">实时监测

</string>
    <string name="ss19">心电报告

</string>
    <string name="ss20">动态心电图

</string>
    <string name="ss21">监测时长设定

</string>
    <string name="ss23">查看实时波形


</string>
    <string name="ss24">剩余时长

</string>
    <string name="ss100">开始监测

</string>
    <string name="ss101">心电报告

</string>
    <string name="ss102">个人信息

</string>
    <string name="ss103">绑定设备

</string>


    <string name="ss131">导联脱落</string>
    <string name="ss132">导联选择</string>



    <string-array name="ecg_yaxis">
        <item>2.5</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
    </string-array>
    <string-array name="ecg_speed">
        <item>12.5</item>
        <item>25</item>
        <item>50</item>
    </string-array>
    <string-array name="ecg_speed1">
        <item>I</item>
        <item>II</item>
        <item>V1</item>
        <item>V2</item>
        <item>V3</item>
        <item>V4</item>
        <item>V5</item>
        <item>V6</item>
    </string-array>

    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="ss139">小时</string>
    <string name="ss120">取消</string>
    <string name="ss111">请选择监测时长</string>
    <string name="ss119">确定</string>
    <string name="ss127">停止Holter</string>
    <string name="ss143">请先绑定设备</string>
    <string name="ss144">点击两次退出</string>
    <string name="ss145">权限被拒绝</string>
    <string name="ss146">解绑成功</string>
    <string name="ss147">收到一键报警</string>
    <string name="ss148">连接成功</string>
    <string name="ss149">连接失败</string>
    <string name="ss150">正在获取状态</string>
    <string name="ss151">请先连接设备</string>
    <string name="ss152">查询状态失败</string>
    <string name="ss153">你确定要终止Holter心电监测吗?</string>

    <string name="ss154">设备返回失败状态，请重试</string>

    <string name="ss155">请输入姓名</string>
    <string name="ss156">请选择生日</string>
    <string name="ss157">请选择性别</string>
    <string name="ss158">请选择身高</string>
    <string name="ss159">请选择体重</string>
    <string name="ss160">提交失败</string>

    <string name="ss161">请先停止Holter模式后重试</string>
    <string name="ss162">请输入(家庭) 常用WiFi网络名称</string>
    <string name="ss163">请输入WiFi密码</string>

    <string name="ss164">请输入8-14位WiFi密码</string>
    <string name="ss165">连接失败,请输入正确的WiFi密码</string>
    <string name="ss166">连接失败,请输入正确的WiFi名称</string>
    <string name="ss167">连接失败, 请检查设备后重试</string>
    <string name="ss168">重新配置</string>
    <string name="ss169">您确定要重新进行配置吗</string>
    <string name="ss170">导联脱落，请调整</string>
    <string name="ss171">导联连接正常</string>
    <string name="ss172">蓝牙未连接</string>
    <string name="ss173">蓝牙连接</string>
    <string name="ss174">请选择WIFI</string>
    <string name="ss175">可用WIFI列表</string>
    <string name="ss176">Wifi列表刷新成功</string>
    <string name="ss177">请下拉刷新重试</string>
    <string name="ss178">请开启GPS后，下拉刷新</string>
    <string name="ss179">加密</string>
    <string name="ss180">开放</string>
    <string name="ss181">不支持中文wifi名字</string>
    <string name="ss182">wifi名字不能超过14位</string>
    <string name="ss183">请输入密码</string>
    <string name="ss184">建立与</string>
    <string name="ss185">连接</string>
    <string name="ss186">建立连接</string>
    <string name="ss187"><u>用户协议</u></string>
    <string name="ss188">请同意用户协议</string>
    <string name="ss189">多次同步失败，请重启盒子后再试</string>
    <string name="ss190">正在同步状态，请稍后</string>
    <string name="ss191">状态同步成功</string>
    <string name="ss192">正在同步状态，请在状态同步成功后，再设置</string>
    <string name="ss193">二维码错误</string>
    <string name="ss194">打开相机出错</string>
    <string name="ss195">更多</string>
    <string name="ss196">请输入手机号</string>
    <string name="ss197">请输入验证码</string>
    <string name="ss198">手机号格式有误</string>
    <string name="ss199">登录失败</string>
    <string name="ss200">请检查网络连接</string>
    <string name="ss201">请求成功</string>
    <string name="ss202">请求失败，请重试</string>
    <string name="ss203">用户协议与隐私条款</string>
    <string name="ss204">注销账号</string>
    <string name="ss205">账号注销后，您已测量的健康数 据将永久删</string>
    <string name="ss206">继续注销</string>
    <string name="ss207">注销</string>
    <string name="ss208">注销失败</string>
    <string name="ss209">注销成功</string>
</resources>
