<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.benefm.ecg.ECGHolterFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_heart_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="52sp" />

            <TextView
                android:id="@+id/tv_heart_rate_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ss14"
                android:textColor="@color/white"

                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="52sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="心律失常"
                android:textColor="@color/white"

                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_time_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/ss21"
            android:textColor="#231916"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_right_arrow"


            />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@id/iv_arrow"
            android:text="@string/ss111"
            android:textColor="@color/color_gray"
            android:textSize="16sp" />




    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:background="#C9E1ED" />

    <RelativeLayout
        android:id="@+id/rl_go_wave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/ss23"
            android:textColor="#231916"
            android:textSize="17sp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_right_arrow"


            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:background="#C9E1ED" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="8dp"
        android:background="#C9E1ED" />



    <TextView
        android:id="@+id/tv_time_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="23:45:12"
        android:textColor="@color/color_black"
        android:textSize="38sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:text="@string/ss24"
        android:textColor="@color/color_gray"
        android:textSize="16sp"

        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <Button
            android:id="@+id/iv_start"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_blue_round_shape1"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="12dp"
            android:textAllCaps="false"
            android:text="@string/ss100"
            android:textColor="#fff"
            />
       <!-- <ImageView
            android:id="@+id/iv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center_horizontal|bottom"
            android:src="@drawable/icon_start_monitor"

            />-->
    </FrameLayout>



</LinearLayout>
