<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/blenot"/>
        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/tvConn"
            android:text="@string/ss172"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/befmbg"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/clothes"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:id="@+id/ra"
            android:layout_marginTop="30dp"
            android:src="@drawable/ra" />

        <ImageView
            android:id="@+id/la"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/la" />
        <ImageView
            android:id="@+id/v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/v1" />
        <ImageView
            android:id="@+id/v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/v2" />
        <ImageView
            android:id="@+id/v3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="143dp"
            android:layout_marginTop="116dp"
            android:src="@drawable/v3" />
        <ImageView
            android:id="@+id/v4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="134dp"
            android:src="@drawable/v4" />
        <ImageView
            android:id="@+id/v5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="137dp"
            android:src="@drawable/v5" />
        <ImageView
            android:id="@+id/v6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="182dp"
            android:layout_marginTop="138dp"
            android:src="@drawable/v6" />
        <ImageView
            android:id="@+id/rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="158dp"
            android:src="@drawable/rl" />
        <ImageView
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="166dp"
            android:layout_marginTop="158dp"
            android:src="@drawable/ll" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/yellonot"
            android:text="@string/ss170"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/green"
            android:text="@string/ss171"/>
    </LinearLayout>

</LinearLayout>